[project]
name = "multiview-lane-fusion"
version = "0.1.0"
description = "Multi-view Lane Fusion Library"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch==2.1.0",
  "torchvision==0.16.0",
  "torchaudio==2.1.0",
  "mmcv==2.1.0",
  "mmengine==0.10.7",
  "mmdet==3.2.0",
  "numpy==1.26.4"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
